packages/test-dev-server/tests/fixtures/invalidation-multiple-parent/src/child.js
if (import.meta.hot) {
  import.meta.hot.accept((_newExports) => {
    import.meta.hot.invalidate();
  });
}

export const value = 'child';
